# FileCompressionTool

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cc
src/: CMakeLists.txt
src/CompressionManager/: CMakeLists.txt  CompressionManager.cc  CompressionManager.h
src/FileManager/: CMakeLists.txt  FIleManager.h  FileManager.cc
